--- a/bridgeWDC.html
+++ b/bridgeWDC.html
@@ -18,7 +18,10 @@
         <input type="text" id="apiKey">
     </div>
     <div>
-        <button type="button" id="submitButton">Get Data</button>
+        <button type="button" id="submitButton">Get Data
+
+            
+        </button>
     </div>
 </body>
 
