--- a/bridgeWDC.html
+++ b/bridgeWDC.html
@@ -2,26 +2,70 @@
 
 <head>
     <title>Bridge API</title>
+    <link rel="stylesheet" href="bridgeWDC.css">
     <meta http-equiv="Cache-Control" content="no-store" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
     <script src="https://connectors.tableau.com/libs/tableauwdc-2.3.latest.js" type="text/javascript"></script>
     <script src="bridgeWDC.js" type="text/javascript"></script>
+    
 </head>
 
 <body>
-    <div>
-        <label for="url">URL:</label>
-        <input type="text" id="url">
-    </div>
-    <div>
-        <label for="apiKey">Key:</label>
-        <input type="text" id="apiKey">
-    </div>
-    <div>
-        <button type="button" id="submitButton">Get Data
+    <div class="container-fluid">
+        <div class="row">
+            <h1 class="mx-auto">Bridge Tableau Web Data Connector</h1>
+        </div>
+        <div class="row">
+            <div class="col-sm" id="url-section">
+                <form>
+                    <div class="form-group">
+                        <label for="url">URL:</label>
+                        <input class="form-control" type="text" id="url">
+                    </div>
+                    <div class="form-group">
+                        <label for="apiKey">Key:</label>
+                        <input class="form-control" type="text" id="apiKey">
+                    </div>
+                    <button type="button" class="btn btn-primary" id="credentialsButton">Set Credentials and URL</button>
+                </form>
 
-            
-        </button>
+
+
+            </div>
+            <div class="col-sm" id="api-section" style="display: none;">
+                <div class="input-group my-3">
+                    <select class="custom-select" id="apiSelector">
+                        <option value="authorUser">All Users</option>
+                        <option value="authorCourseTemplates">All Courses</option>
+                        <option value="authorPrograms">All Programs</option>
+                    </select>
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="addButton">Add to List</button>
+                    </div>
+                </div>
+                <div>
+                    <ul class="list-group my-3" id="apiList">
+                    </ul>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary" id="resetButton">Re-enter URL and Credentials</button>
+                    <button type="button" class="btn btn-primary" id="submitButton">Finish</button>
+                </div>
+            </div>
+            <!-- <div class="col-sm" id="customizeSection"> -->
+                <!-- <div> -->
+                    <!-- item customizer here if desired feature -->
+                <!-- </div> -->
+            <!-- </div> -->
+        </div>
     </div>
 </body>
 
